--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <tr>
             <td>Fila 2, C1</td>
-            <td>Fila 2, C2</td>
+            <td>Fila 2, C2 blablabla</td>
         </tr>
     
     
